# rag-benchmark

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  debug_embed.py  docker-compose.yml  modal_vllm.py  mvllm.py  pyproject.toml  requirements-api.txt  requirements.txt  test_vllm.py
api/: main.py
core/evaluation/: benchmark_runner.py  question_set.json  ragas_evaluator.py
core/generation/: generator.py  llm_client.py
core/ingestion/: embedder.py  pdf_loader.py  pipeline.py
core/ingestion/chunkers/: base_chunker.py  fixed_chunker.py  hierarchical_chunker.py  semantic_chunker.py
core/retrieval/: dense_retriever.py  hybrid_retriever.py  hyde_retriever.py
embedding-api/: Dockerfile  requirements.txt  server.py
ui/: app.py
vectordb/: qdrant_client.py
