[project]
name = "rag-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "loguru>=0.7.3",
    "modal>=1.4.3",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "plotly>=6.7.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.0",
    "spacy>=3.8.14",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "tqdm>=4.67.3",
    "uvicorn[standard]>=0.47.0",
]
